<resources>
    <string name="app_name" translatable="false">find.homies</string>
    <string name="login">Login</string>
    <string name="sign_up" translatable="false">Sign Up</string>
    <string name="logoFindHomies">findHomies</string>
    <string name="username">Username</string>
    <string name="findhomies">FINDHOMIES</string>
    <string name="todo">todo</string>
    <string name="continueButton">continueButton</string>
    <string name="Continue">Continue</string>
    <string name="nome">Nome</string>

</resources>
