<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dingo.loginscreentryout.MainActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_color">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="41dp"
            app:srcCompat="@drawable/logo" android:contentDescription="@string/logoFindHomies" />
    </RelativeLayout>

    <Button
        android:id="@+id/bLogin"
        style="style/Widget.Button.Transparent"
        android:layout_width="209dp"
        android:layout_height="60dp"
        android:layout_marginBottom="144dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#809FA8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="1"
        android:text="@string/login"
        android:textColor="#7E9AD9"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bSignup"
        style="style/Widget.Button.Transparent"
        android:layout_width="209dp"
        android:layout_height="60dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#809FA8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="1"
        android:text="@string/sign_up"
        android:textColor="#7E9AD9"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
